# floe

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.duckdb  Dockerfile.release  Makefile  README.md  clippy.toml  config.schema.yaml  deny.toml  profile.schema.yaml  refactoring_plan.md
.cargo/: config.toml
crates/floe-cli/: Cargo.toml  build.rs
crates/floe-cli/src/: delegate.rs  logging.rs  main.rs  manifest_output.rs  output.rs  validate_output.rs
crates/floe-cli/tests/: add_entity.rs  delegate.rs  integration.rs  logging_contract.rs  manifest_output.rs  output.rs  state.rs  validate_output.rs
crates/floe-cli/tests/fixtures/: invalid_config.yml
crates/floe-cli/tests/integration/: aws_cloud_parquet.rs  gcp_cloud_parquet.rs
crates/floe-core/: Cargo.toml  config.schema.yaml
crates/floe-core/src/: add_entity.rs  check.rs  config.rs  errors.rs  format.rs  lib.rs  log.rs  manifest.rs  parse.rs  read.rs  required.rs  runtime.rs  warnings.rs  write.rs  yaml_decode.rs
crates/floe-core/src/checks/: cast.rs  mismatch.rs  mod.rs  normalize.rs  not_null.rs  unique.rs
crates/floe-core/src/config/: catalog.rs  filesystem.rs  location.rs  mod.rs  parse.rs  storage.rs  template.rs  types.rs  validate.rs  yaml_decode.rs
crates/floe-core/src/io/: format.rs  mod.rs  read_csv.rs  resolve.rs  s3.rs  write.rs
crates/floe-core/src/io/fs/: local.rs  mod.rs  s3.rs
crates/floe-core/src/io/read/: avro.rs  csv.rs  fixed_width.rs  json.rs  json_selector.rs  mod.rs  orc.rs  parquet.rs  xlsx.rs  xml.rs  xml_selector.rs
crates/floe-core/src/lineage/: mod.rs
crates/floe-core/src/manifest/: builder.rs  mod.rs  model.rs  reconstruct.rs
crates/floe-core/src/profile/: mod.rs  parse.rs  types.rs  validate.rs
crates/floe-core/src/report/: build.rs  entity.rs  mod.rs  output.rs
crates/floe-core/src/run/: context.rs  entity.rs  events.rs  file.rs  mod.rs  normalize.rs  output.rs  perf.rs  report_output.rs  reporting.rs
crates/floe-core/src/runner/: kubernetes.rs  local.rs  mod.rs  outcome.rs
crates/floe-core/src/state/: mod.rs
crates/floe-core/src/vars/: mod.rs  resolve.rs
crates/floe-core/tests/: check_tests.rs  config.rs  config_validation.rs  io.rs  io_format.rs  io_json_array.rs  io_json_ndjson.rs  io_read.rs  io_storage.rs  io_write.rs  json_ndjson.rs  parquet_input.rs  report_storage.rs  run.rs  run_check_order.rs  run_checks.rs  run_entity.rs  run_entity_accepted_output.rs  run_normalize.rs  run_report.rs  run_schema.rs  run_schema_mismatch.rs  schema_mismatch.rs
crates/floe-core/tests/config/: adls_storage.rs  adls_validation.rs  config_validation.rs  gcs_storage.rs  gcs_validation.rs  templating.rs
crates/floe-core/tests/integration/: archive_run.rs  composite_unique.rs  delta_run.rs  dry_run.rs  duckdb_run.rs  fixed_width.rs  iceberg_gcs_run.rs  iceberg_glue_run.rs  iceberg_run.rs  iceberg_s3_run.rs  json_selectors.rs  local_run.rs  mod.rs  path_normalization.rs  run_entities_filter.rs
crates/floe-core/tests/io/: json_array.rs  parquet_input.rs  storage_target.rs
crates/floe-core/tests/io_tests/: format.rs
crates/floe-core/tests/run/: entity_accepted_output.rs  mod.rs
crates/floe-core/tests/run_tests/: checks.rs  normalize.rs
crates/floe-core/tests/unit/: common.rs  mod.rs
crates/floe-python/: .gitignore  Cargo.toml  README.md  pyproject.duckdb.toml  pyproject.toml
crates/floe-python/python/floe/: __init__.py  _floe.pyi
crates/floe-python/src/: functions.rs  lib.rs  observer.rs
crates/floe-python/src/types/: config.rs  errors.rs  mod.rs  outcome.rs
crates/floe-python/tests/: test_floe.py
crates/floe-python/tests/fixtures/: config.yml  invalid_config.yml  profile.yml
floe-dagster/: README.md  pyproject.toml
floe-dagster/example/: config.yml
floe-dagster/example/in/hr/: employees.csv
floe-dagster/example/in/sales/: invoices.csv
floe-dagster/src/floe_dagster/: assets.py  definitions.py
orchestrators/airflow-floe/: INTEGRATION_SPEC.md  README.md  pyproject.toml
orchestrators/airflow-floe/dags/: floe_example_dag.py  floe_example_entity_mapped_dag.py  floe_example_operator_dag.py  floe_example_simple_dag.py  floe_hook.py  floe_manifest.py  floe_operators.py  floe_runtime.py
orchestrators/airflow-floe/example/: config.hr.yml  config.sales.yml  config.yml  manifest.airflow.json
orchestrators/airflow-floe/example/manifests/: hr.manifest.json  sales.manifest.json
orchestrators/airflow-floe/schemas/: floe.airflow.manifest.v1.json  floe.airflow.run.v1.json  floe.airflow.validate.v1.json
orchestrators/airflow-floe/src/airflow_floe/: __init__.py  databricks_runner.py  hooks.py  k8s_status.py  kubernetes_runner.py  manifest.py  manifest_discovery.py  operators.py  profile.py  runtime.py
orchestrators/airflow-floe/tests/: test_databricks_client.py  test_databricks_runner.py  test_hook_and_operator.py  test_kubernetes_runner.py  test_manifest_discovery.py  test_manifest_loader.py  test_profile.py  test_runtime.py
orchestrators/dagster-floe/: .gitignore  INTEGRATION_SPEC.md  MANIFEST.in  README.md  pyproject.toml  workspace.yaml
orchestrators/dagster-floe/example/: README.md  config.hr.yml  config.sales.yml  config.yml  definitions.py  manifest.dagster.json
orchestrators/dagster-floe/example/manifests/: hr.manifest.json  sales.manifest.json
orchestrators/dagster-floe/schemas/: floe.dagster.manifest.v1.json
orchestrators/dagster-floe/src/floe_dagster/: __init__.py  asset_checks.py  assets.py  databricks_client.py  databricks_runner.py  definitions.py  events.py  kubernetes_runner.py  manifest.py  runner.py
orchestrators/dagster-floe/tests/: test_asset_checks.py  test_assets_manifest.py  test_databricks_client.py  test_databricks_runner.py  test_definitions.py  test_docker_runner_mount.py  test_events.py  test_kubernetes_runner.py  test_localrunner_optional.py  test_manifest.py  test_plan.py  test_remote_json.py  test_runner_defaults.py
orchestrators/dagster-floe/tests/fixtures/: manifest.json  manifest_hr.json  manifest_sales.json  run_events.ndjson
(+341 files in other folders)
