[package]
name = "floe-core"
version = "0.2.3"
edition = "2021"
description = "Core library for Floe, a YAML-driven technical ingestion tool."
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/malon64/floe"
homepage = "https://github.com/malon64/floe"
keywords = ["ingestion", "data-quality", "csv", "polars", "yaml"]

[lib]
path = "src/lib.rs"

[dependencies]
yaml-rust2 = "0.11"
polars = { version = "0.52.0", features = ["csv", "parquet", "lazy", "timezones", "dtype-date", "dtype-datetime", "dtype-time", "polars-ops", "is_unique", "is_first_distinct"] }
calamine = "0.24"
rayon = "1"
deltalake = { version = "0.30.1", features = ["datafusion", "s3", "azure", "gcs"] }
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
glob = "0.3"
aws-config = "1"
aws-sdk-s3 = "1"
apache-avro = "0.16"
google-cloud-storage = { package = "gcloud-storage", version = "1.2.0" }
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs", "io-util"] }
azure_core = "0.20"
azure_identity = "0.20"
azure_storage = "0.20"
azure_storage_blobs = "0.20"
futures = "0.3"
uuid = "1"
arrow = "57"
df-interchange = { version = "0.3.2", features = ["arrow_57", "polars_0_52"] }
orc-rust = "0.7.1"

# Optional: used only to unify transitive TLS feature selection for linux release builds.
# Enabling `vendored-openssl` forces `reqwest` to build OpenSSL from source and link it
# statically, avoiding runtime deps on the host/container (e.g. libssl.so.1.0.0).
reqwest = { version = "0.12", optional = true, default-features = true, features = ["native-tls-vendored"] }

[dev-dependencies]
rust_xlsxwriter = "0.67"

[features]
vendored-openssl = ["dep:reqwest"]
