[package]
name = "floe-core"
version = "0.4.5"
edition = "2021"
description = "Core library for Floe, a YAML-driven technical ingestion tool."
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/malon64/floe"
homepage = "https://github.com/malon64/floe"
keywords = ["ingestion", "data-quality", "csv", "polars", "yaml"]

[lib]
path = "src/lib.rs"

[dependencies]
yaml-rust2 = "0.11"
polars = { version = "0.52.0", features = ["csv", "parquet", "lazy", "new_streaming", "timezones", "dtype-date", "dtype-datetime", "dtype-time", "polars-ops", "is_unique", "is_first_distinct"] }
calamine = "0.24"
rayon = "1"
deltalake = { version = "0.30.1", features = ["datafusion", "s3", "azure", "gcs"] }
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
time = { version = "0.3", features = ["formatting"] }
glob = "0.3"
roxmltree = "0.20"
aws-config = "1"
aws-sdk-s3 = "1"
aws-sdk-glue = "1"
apache-avro = "0.16"
google-cloud-storage = { package = "gcloud-storage", version = "1.2.0" }
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs", "io-util"] }
azure_core = "0.20"
azure_identity = "0.20"
azure_storage = "0.20"
azure_storage_blobs = "0.20"
futures = "0.3"
uuid = "1"
arrow = "57"
iceberg = "0.9.0"
iceberg-catalog-rest = "0.9.0"
iceberg-storage-opendal = { version = "0.9.1", features = ["opendal-s3", "opendal-gcs"] }
df-interchange = { version = "0.3.2", features = ["arrow_57", "polars_0_52"] }
orc-rust = "0.7.1"

reqwest = { version = "0.12", default-features = true, features = ["native-tls-vendored", "json", "blocking"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "1"

[dev-dependencies]
rust_xlsxwriter = "0.67"
mockito = "1"

[features]
vendored-openssl = []
