[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "floe-python"
version = "0.3.8"
description = "Python bindings for floe-core — run floe pipelines at Rust speed from Python and notebooks"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Floe contributors" }]
keywords = ["ingestion", "data-quality", "yaml", "polars"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.optional-dependencies]
dev = ["pytest>=7", "maturin>=1.7"]

[tool.maturin]
# The compiled extension is installed as floe._floe
module-name = "floe._floe"
manifest-path = "Cargo.toml"
python-source = "python"
features = []
