[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "floe-python"
version = "0.5.0"
description = "Python bindings for floe-core — run floe pipelines at Rust speed from Python and notebooks"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Floe contributors" }]
keywords = ["ingestion", "data-quality", "yaml", "polars"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://github.com/malon64/floe"
Repository = "https://github.com/malon64/floe"
"Bug Tracker" = "https://github.com/malon64/floe/issues"

[project.optional-dependencies]
dev = ["pytest>=7", "maturin>=1.7"]

[tool.maturin]
# The compiled extension is installed as floe._floe
module-name = "floe._floe"
manifest-path = "Cargo.toml"
python-source = "python"
features = []
