[project]
name = "dagster-floe"
version = "0.0.0"
description = "Dagster connector for Floe CLI (config-driven ingestion)"
requires-python = ">=3.10"
dependencies = [
  "dagster>=1.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
